[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/theme/dark_theme.tres" type="Theme" id=1]
[ext_resource path="res://components/wizard/wizard_steps/wizard_step_multi_prompt.gd" type="Script" id=2]
[ext_resource path="res://components/shared/doc_button.tscn" type="PackedScene" id=3]

[node name="WizardStep_StepMultiPrompt" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -926, -208 )
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="TextLabel" type="RichTextLabel" parent="VBox"]
self_modulate = Color( 0.537255, 0.819608, 0.945098, 1 )
margin_right = 1920.0
margin_bottom = 24.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
theme_type_variation = "FontMedium"
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "Lorem [code]Ipsum[/code] Dolor, [b]Lorem[/b]"
text = "Lorem Ipsum Dolor, Lorem"
fit_content_height = true
scroll_active = false

[node name="FieldsMargin" type="MarginContainer" parent="VBox"]
margin_top = 40.0
margin_right = 1920.0
margin_bottom = 1044.0
rect_min_size = Vector2( 450, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_top = 20
custom_constants/margin_left = 100
custom_constants/margin_bottom = 0

[node name="Fields" type="VBoxContainer" parent="VBox/FieldsMargin"]
margin_left = 100.0
margin_top = 20.0
margin_right = 1820.0
margin_bottom = 1004.0
size_flags_vertical = 3

[node name="MandatoryWarning" type="Label" parent="VBox"]
margin_top = 1060.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_vertical = 0
text = "Missing Mandatory Fields"

[node name="TextAppearTween" type="Tween" parent="."]

[node name="FieldTemplate" type="HBoxContainer" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="FieldTemplate"]
margin_top = 6.0
margin_right = 150.0
margin_bottom = 26.0
rect_min_size = Vector2( 150, 0 )
text = "Prompt Field"

[node name="LineEdit" type="LineEdit" parent="FieldTemplate"]
margin_left = 154.0
margin_right = 1013.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="TextEdit" type="TextEdit" parent="FieldTemplate"]
margin_left = 1017.0
margin_right = 1876.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CheckBox" type="CheckBox" parent="FieldTemplate"]
margin_left = 1880.0
margin_right = 1920.0
margin_bottom = 32.0
hint_tooltip = "Uncheck to provide manually to resoto.worker"
pressed = true

[node name="DocButton" parent="FieldTemplate" instance=ExtResource( 3 )]
visible = false
margin_left = 150.0
margin_right = 183.0

[connection signal="tween_completed" from="TextAppearTween" to="." method="_on_TextAppearTween_tween_completed"]
